fix z-index in footer

--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -8,6 +8,7 @@ header {
     padding: 0 353px;
     box-sizing: border-box;
     position: fixed;
+    z-index: 100;
 }
 
 .header-contacts {
